--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kangwon Land</title>
+  <title>Kangwon Land: 강원랜드</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/css_libs/swiper(4.5.1).css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
