--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:url" content="//07li-min.github.io/kangwonland/">
+  <meta property="og:title" content="강원랜드 홈페이지 리뉴얼">
+  <meta property="og:description" content="기업 홈페이지 리뉴얼">
+  <meta property="og:type" content="website">
   <title>KangwonLand</title>
   <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/css_libs/animate.css">
   <link rel="stylesheet" href="./css/css_libs/swiper(4.5.1).css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
   <link rel="stylesheet" href="./css/index.css">
