--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:url" content="//07li-min.github.io/kangwonland/">
-  <meta property="og:title" content="강원랜드 홈페이지 리뉴얼">
-  <meta property="og:description" content="기업 홈페이지 리뉴얼">
-  <meta property="og:type" content="website">
   <title>KangwonLand</title>
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/css_libs/animate.css">
   <link rel="stylesheet" href="./css/css_libs/swiper(4.5.1).css">
+  <link rel="stylesheet" href="./css/css_libs/aos.css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
   <link rel="stylesheet" href="./css/index.css">
   <script src="./js/lib/jquery-3.6.0.js"></script>
   <script src="./js/lib/swiper(4.5.1).min.js"></script>
+  <script src="./js/lib/aos.js"></script>
   <script src="./js/index.js"></script>
 </head>
 <body>
@@ -27,26 +24,13 @@
       <form name="pop_form">
         <div>
           <input type="checkbox" name="chkbox" value="checkbox" id='chkbox' >
-          <label for="chkbox">&nbsp&nbsp오늘 하루동안 보지 않기</label>
+          <label for="chkbox">&nbsp;&nbsp;오늘 하루동안 보지 않기</label>
         </div>
         <button class="close_pop" type="button">닫기</button>    
       </form>
 	</div>
   </div>
-  <div class="popup popup-2 active" id="popup_2">
-    <div class="popup-box">
-      <div>
-          <a href="#"><img src="./img/popup/popup-img2.jpg" usemap="#popup" alt="event page"></a>
-      </div>
-      <form name="pop_form2">
-        <div>
-          <input type="checkbox" name="chkbox2" value="checkbox" id='chkbox2' >
-          <label for="chkbox2">&nbsp&nbsp오늘 하루동안 보지 않기</label>
-        </div>
-        <button class="close_pop" type="button">닫기</button>    
-      </form>
-    </div>
-  </div>
+  
     <!-- header -->
     <header class="hd">
       <nav class="top-hd">
@@ -66,6 +50,7 @@
         <!-- pc-menu -->
         <nav class="pc-hd">
           <ul class="gnb">
+            <!-- 강원랜드 -->
             <li class="dep1">
             <a class="tit" href="#">강원랜드</a>
               <div class="dep2">
@@ -118,6 +103,7 @@
                 </div>
               </div>
             </li>
+            <!-- 사업분야 -->
             <li class="dep1">
               <a class="tit" href="#">사업분야</a>
               <div class="dep2">
@@ -162,6 +148,7 @@
                 </div>
               </div>
             </li>
+            <!-- 투자정보 -->
             <li class="dep1">
               <a class="tit" href="#">투자정보</a>
               <div class="dep2">
@@ -435,6 +422,7 @@
             <button class="off">ENG</button>
           </div>
           <ul class="mob-gnb">
+            <!-- 강원랜드 -->
             <li class="m-dep1">
               <a class="tit" href="#">강원랜드</a>
               <ul class="m-dep2">
@@ -482,6 +470,7 @@
                 </li>
               </ul>
             </li>
+            <!-- 사업분야 -->
             <li class="m-dep1">
               <a class="tit" href="#">사업분야</a>
               <ul class="m-dep2">
@@ -521,6 +510,7 @@
                 </li>
               </ul>
             </li>
+            <!-- 투자정보 -->
             <li class="m-dep1">
               <a class="tit" href="#">투자정보</a>
               <ul class="m-dep2">
@@ -774,6 +764,7 @@
             </li>
           </ul>
         </nav>
+        <!-- mob-btn-->
         <div class="mob-btn">
           <button>
             <span class="bar bar1"></span>
@@ -799,7 +790,7 @@
       </div>
     </section>
     <!-- news -->
-    <section class="news">
+    <section class="news" data-aos="fade-up" >
       <div class="inner">
         <p class="big-tit">News</p>
         <ul class="item-list">
@@ -843,7 +834,7 @@
       </div>
     </section>
     <!-- about -->
-    <section class="about">
+    <section class="about" data-aos="fade-up" >
       <div class="inner">
         <h2 class="big-tit">About</h2>
       </div>
@@ -866,7 +857,7 @@
       </div>
     </section>
     <!-- business -->
-    <section class="business">
+    <section class="business" data-aos="fade-up" >
     <div class="inner">
       <span class="big-tit">BUSINESS</span>
       <div class="container">
@@ -968,7 +959,7 @@
     </div>
     </section>
     <!-- management  -->
-    <section class="management">
+    <section class="management" data-aos="fade-up" >
       <video class="video" poster="./img/management/Clouds-video.mp4" src="./img/management/Clouds-video.mp4" loop="true" muted="" autoplay="" playsinline="" ></video>
       <div class="text inner">
         <div class="sub-logo"><img src="./img/logo/logo1.png" alt="sub-logo"></div>
@@ -984,7 +975,7 @@
     <!-- content -->
     <section class="info">
       <div class="inner">
-        <div class="stock">
+        <div class="stock" data-aos="fade-up" >
           <div class="main-txt">
             <h2>IR</h2>
             <h2 class="num state">23,000</h2>
@@ -1000,7 +991,7 @@
             </li>
           </ul>
         </div>
-        <div class="content">
+        <div class="content" data-aos="fade-up" data-aos-delay="100">
           <div class="emp">
             <div class="img-box"><img src="./img/info/img1.png" alt="emp-img"></div>
             <a class="txt-box" href="#" target="_blank">
@@ -1031,6 +1022,7 @@
             <li><img src="./img/icon/ski.png" alt="icon6"></li>
           </ul>
           <div class="family">
+            <!-- <p class="tit">관련사이트 바로가기</p> -->
             <p class="tit">패밀리사이트</p>
             <ul class="fam-box">
               <li><a href="#">하이원리조트</a></li>
